<resources>
    <string name="app_name">VET Air Bus Express</string>
    <string name="booking_ticket">Booking Ticket</string>
    <string name="youtube">YouTube</string>
    <string name="music">Music</string>
    <string name="movie">Movie</string>
    <string name="internet">Internet</string>
    <string name="game">Game</string>
    <string name="version" translatable="false">Version 2.5</string>
    <string name="bus_image" translatable="false">bus_image</string>
    <string name="khmer_sg" translatable="false">Khmer Songs</string>
    <string name="english_sg" translatable="false">English Songs</string>
    <string name="remix_sg" translatable="false">Remix Songs</string>
    <string name="cartoon" translatable="false">Cartoon Movie</string>
    <string name="hollywood" translatable="false">Hollywood Movie</string>
    <string name="khmer_comedy" translatable="false">Khmer Comedy</string>
    <string name="dubbed_khmer" translatable="false">Movie Dubbed Khmer</string>
    <string name="song" translatable="false">Song</string>
</resources>
