<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/home_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image" />

    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="530dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal">

        <!-- Internet Status -->
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/internet_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/internet_connect"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/internet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WiFi"
                android:textSize="10sp"
                android:gravity="center" />
        </LinearLayout>

        <!-- Bluetooth Status -->
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bluetooth_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bluetooth_connect"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/bluetooth_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BT"
                android:textSize="10sp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>


    <GridLayout
        android:id="@+id/first_item_view"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginLeft="530dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="70dp"
        android:columnCount="2"
        android:rowCount="1"
        tools:ignore="RtlHardcoded,VisualLintBounds">

        <androidx.cardview.widget.CardView
            android:id="@+id/ticket_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="VisualLintBounds">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
            android:background="@color/yellow">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booking_ticket"
                android:src="@drawable/ticket"
                 />

                <TextView
                    android:id="@+id/ticket_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/booking_ticket"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    android:fontFamily="@font/suwannaphumblack"
                    android:textStyle="bold" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/youtube_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="VisualLintBounds">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/yellow">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/youtube"
                    android:src="@drawable/youtube"
                     />

                <TextView
                    android:id="@+id/youtube_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/youtube"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    android:fontFamily="@font/suwannaphumblack"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
    <GridLayout
        android:id="@+id/second_item_view"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginStart="530dp"
        android:layout_below="@id/first_item_view"
        android:layout_marginTop="-60dp"
        android:layout_marginBottom="70dp"
        android:columnCount="2"
        android:rowCount="1"
        tools:ignore="VisualLintBounds">
        <androidx.cardview.widget.CardView
            android:id="@+id/music_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="VisualLintBounds">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/yellow">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/music"
                    android:src="@drawable/music"
                     />

                <TextView
                    android:id="@+id/music_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/music"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    android:fontFamily="@font/suwannaphumblack"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/video_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/yellow"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/movie"
                    android:src="@drawable/video" />

                <TextView
                    android:id="@+id/video_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/movie"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    android:fontFamily="@font/suwannaphumblack"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <GridLayout
        android:id="@+id/third_item_view"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginLeft="530dp"
        android:layout_below="@id/second_item_view"
        android:layout_marginTop="-60dp"
        android:layout_marginBottom="70dp"
        android:columnCount="2"
        android:rowCount="1"
        tools:ignore="RtlHardcoded,VisualLintBounds">
        <androidx.cardview.widget.CardView
            android:id="@+id/internet_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="VisualLintBounds">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/yellow">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/internet"
                    android:src="@drawable/internet"
                     />

                <TextView
                    android:id="@+id/internet_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/internet"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    android:fontFamily="@font/suwannaphumblack"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/game_view"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            tools:ignore="VisualLintBounds">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/yellow">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/game"
                    android:src="@drawable/game"
                     />

                <TextView
                    android:id="@+id/game_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/game"
                    android:textColor="#4A148C"
                    android:textSize="13sp"
                    android:fontFamily="@font/suwannaphumblack"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <GridLayout
        android:id="@+id/languages_view"
        android:layout_width="430dp"
        android:layout_height="60dp"
        android:layout_marginLeft="500dp"
        android:layout_below="@+id/third_item_view"
        android:layout_marginTop="-50dp"
        android:columnCount="4"
        android:rowCount="1"
        tools:ignore="RtlHardcoded,VisualLintBounds">

        <!-- Khmer -->
        <androidx.cardview.widget.CardView
            android:id="@+id/khmer_view"
            android:layout_width="110dp"
            android:layout_height="60dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/transparent"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@android:color/transparent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/kh"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- English -->
        <androidx.cardview.widget.CardView
            android:id="@+id/english_view"
            android:layout_width="110dp"
            android:layout_height="60dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/transparent"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@android:color/transparent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/en"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Chinese -->
        <androidx.cardview.widget.CardView
            android:id="@+id/chines_view"
            android:layout_width="110dp"
            android:layout_height="60dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/transparent"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@android:color/transparent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ch"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Vietnam -->
        <androidx.cardview.widget.CardView
            android:id="@+id/vietnamese_view"
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/transparent"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@android:color/transparent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/vn"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>


    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="-32dp"
        android:layout_marginStart="800dp"
        android:layout_marginTop="469dp"
        android:width="70dp"
        android:height="30dp"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>